--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Goal
 
-This package can be used to calculate three R2s for regression models with the following class: 'lmerMod' (LMM), 'glmerMod' (GLMM), 'phylolm' (Phylogenetic GLS), and 'binaryPGLMM/phyloglm' (Phylogenetic logistic regression). Detailed technical descriptions can be found in [Ives 2017, preprint](http://www.biorxiv.org/content/early/2017/05/30/144170).
+This package provides three R2s for statistical models with correlated errors including classes: 'lmerMod' (LMM), 'glmerMod' (GLMM), 'phylolm' (Phylogenetic GLS), and 'binaryPGLMM/phyloglm' (Phylogenetic Logistic Regression). Detailed technical descriptions can be found in [Ives 2017, preprint](http://www.biorxiv.org/content/early/2017/05/30/144170).
 
 # Installation
 
@@ -26,9 +26,9 @@ library(rr2)
 
 # Package structure
 
-This package has three main functions: `R2.ls()`, `R2.lr()`, and `R2.ce()`. You can use them individually in the form of, for example, `R2.ls(mod, mod.r, phy)`. `phy` argument is not needed for `R2.lr()` but is required for the other two functions when used with phylogenetic regression models. 
+This package has three main functions: `R2.ls()`, `R2.lr()`, and `R2.ce()`. You can use them individually in the form of, for example, `R2.ls(mod, mod.r, phy)`. `phy` argument is not needed for `R2.lr()` but is required for the other two functions when used with phylogenetic models. 
 
-You can calculate all three R2s at the same time with `R2(mod, mod.r, phy)`. You can specifify which R2(s) to calculate within this function too, e.g. `R2(mod, mod.r, phy, ce = FALSE)` or `R2(mod, mod.r, phy, ls = FALSE)`. 
+You can calculate all three R2s at the same time with `R2(mod, mod.r, phy)`. You can also specify which R2(s) to calculate within this function, e.g., `R2(mod, mod.r, phy, ce = FALSE)` or `R2(mod, mod.r, phy, ls = FALSE)`. 
 
 This package also has some helper functions such as `inv.logit()`, `partialR2()`, and `partialR2adj()`.
 
@@ -44,7 +44,7 @@ This package also has some helper functions such as `inv.logit()`, `partialR2()`
 
 # Usage: calculating R2s for regression models
 
-First, let's simulate some data that will be used to fit various regression models
+First, let's simulate data that will be used to fit various regression models
 
 ```{r data-sim}
 # data 
@@ -96,17 +96,6 @@ head(d)
 
 Then, let's fit some models and calculate their R2s.
 
-## LM
-
-```{r lm}
-z.f.lm = lm(y_re_intercept ~ x1 + x2, data = d)
-z.r.lm = lm(y_re_intercept ~ x1, data = d)
-
-library(rr2)
-partialR2(mod = z.f.lm, mod.r = z.r.lm)
-partialR2adj(mod = z.f.lm, df.f = 3, mod.r = z.r.lm, df.r = 2)
-```
-
 ## LMM
 
 ```{r lmm}
@@ -145,18 +134,18 @@ R2(mod = z.f.pgls, mod.r = z.v.pgls, phy = phy) # phy is needed for phylogenetic
 R2(mod = z.f.pgls, phy = phy)
 ```
 
-## Phy-Logistic regression
+## Phylogenetic Logistic Regression
 
 ```{r plog}
 z.f.plog <- rr2::binaryPGLMM(y_phy_binary ~ x1, data = d, phy = phy)
 z.x.plog <- rr2::binaryPGLMM(y_phy_binary ~ 1, data = d, phy = phy)
 z.v.plog <- glm(y_phy_binary ~ x1, data = d, family = "binomial")
 
-R2(mod = z.f.plog, mod.r = z.x.plog, lr = FALSE) # R2.lr doesn't apply for binaryPGLMM
+R2(mod = z.f.plog, mod.r = z.x.plog, lr = FALSE) # R2.lr can't be used with binaryPGLMM because it is not a ML method
 R2(mod = z.f.plog, lr = FALSE)
 
-z.f.plog2 <- rr2:::phyloglm(y_phy_binary ~ x1, data = d, start.alpha = 1, phy = phy, opt.method = "Nelder-Mead")
-z.x.plog2 <- rr2:::phyloglm(y_phy_binary ~ 1, data = d, phy = phy, start.alpha = min(20, z.f.plog2$alpha), opt.method = "Nelder-Mead")
+z.f.plog2 <- phylolm::phyloglm(y_phy_binary ~ x1, data = d, start.alpha = 1, phy = phy)
+z.x.plog2 <- phylolm::phyloglm(y_phy_binary ~ 1, data = d, phy = phy, start.alpha = min(20, z.f.plog2$alpha))
 z.v.plog2 <- glm(y_phy_binary ~ x1, data = d, family = "binomial")
 
 R2(z.f.plog2, z.x.plog2, ls = FALSE, ce = FALSE) # R2.ls and R2.ce do not apply for phyloglm
