--- a/README.Rmd
+++ b/README.Rmd
@@ -26,9 +26,9 @@ library(rr2)
 
 # Package structure
 
-This package has three main functions: `R2.ls()`, `R2.lr()`, and `R2.ce()`. You can use them individually in the form of, for example, `R2.ls(mod, mod.r, phy)`. `phy` argument is not needed for `R2.lr()` but is required for the other two functions when used with phylogenetic models. 
+This package has three main functions: `R2.ls()`, `R2.lr()`, and `R2.ce()`. You can use them individually in the form of, e.g., `R2.ls(mod, mod.r, phy)`. Here, the `phy` is the phylo object containing a phylogenetic tree. This argument is not needed for `R2.lr()` but is required for the other two functions when used with phylogenetic models. 
 
-You can calculate all three R2s at the same time with `R2(mod, mod.r, phy)`. You can also specify which R2(s) to calculate within this function, e.g., `R2(mod, mod.r, phy, ce = FALSE)` or `R2(mod, mod.r, phy, ls = FALSE)`. 
+You can calculate all three R2s at the same time with `R2(mod, mod.r, phy)`. You can also specify which R2(s) to calculate within this function by turning off unwanted methods, e.g., `R2(mod, mod.r, phy, ce = FALSE)` or `R2(mod, mod.r, phy, ls = FALSE)`. 
 
 This package also has some helper functions such as `inv.logit()`, `partialR2()`, and `partialR2adj()`.
 
@@ -44,7 +44,7 @@ This package also has some helper functions such as `inv.logit()`, `partialR2()`
 
 # Usage: calculating R2s for regression models
 
-First, let's simulate data that will be used to fit various regression models
+First, let's simulate data that will be used to fit various models
 
 ```{r data-sim}
 # data 
@@ -75,7 +75,7 @@ b1 <- 1; sd1 <- 1.5
 prob <- rr2::inv.logit(b1 * d$x1 + rep(rnorm(n = p1, sd = sd1), each = nsample)) # random intercept u1
 d$y_binary <- rbinom(n = n, size = 1, prob = prob)
 
-# y for PGLS
+# PGLS
 b1 <- 1.5; signal <- 0.7
 phy <- ape::compute.brlen(ape::rtree(n = n), method = "Grafen", power = 1)
 phy.x <- ape::compute.brlen(phy, method = "Grafen", power = .0001)
@@ -85,7 +85,7 @@ d$x_trait <- x_trait[match(names(e), names(x_trait))]
 d$y_pgls <- b1 * x_trait + e
 rownames(d) <- phy$tip.label	
 
-# y for Phylogenetic logistic regression
+# Phylogenetic Logistic Regression
 b1 <- 1.5; signal <- 2
 e <- signal * ape::rTraitCont(phy, model = "BM", sigma = 1)
 e <- e[match(phy$tip.label, names(e))]
