update README with ackowledgement of the phylolm::phyloglm

--- a/README.Rmd
+++ b/README.Rmd
@@ -99,6 +99,7 @@ Then, let's fit some models and calculate their R2s.
 ## LMM
 
 ```{r lmm}
+library(rr2)
 z.f.lmm <- lme4::lmer(y_re_intercept ~ x1 + x2 + (1 | u1) + (1 | u2), data = d, REML = F)
 z.x.lmm <- lme4::lmer(y_re_intercept ~ x1 + (1 | u1) + (1 | u2), data = d, REML = F)
 z.v.lmm <- lme4::lmer(y_re_intercept ~ 1 + (1 | u2), data = d, REML = F)
