--- a/README.Rmd
+++ b/README.Rmd
@@ -12,23 +12,22 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Goal
 
-This package provides three R2s for statistical models with correlated errors including classes: 'lmerMod' (LMM), 'glmerMod' (GLMM), 'phylolm' (Phylogenetic GLS), and 'binaryPGLMM/phyloglm' (Phylogenetic Logistic Regression). Detailed technical descriptions can be found in [Ives 2017, preprint](http://www.biorxiv.org/content/early/2017/05/30/144170).
+This package provides three R^2^s for statistical models with correlated errors including classes: 'lmerMod' (LMM), 'glmerMod' (GLMM), 'phylolm' (Phylogenetic GLS), and 'binaryPGLMM/phyloglm/communityPGLMM' (Phylogenetic Logistic Regression). Detailed technical descriptions can be found in [Ives 2017, preprint](http://www.biorxiv.org/content/early/2017/05/30/144170).
 
 # Installation
 
 This package can be installed with:
 
 ```{r, eval=FALSE}
-install.packages("devtools")
+# install.packages("devtools")
 devtools::install_github("arives/rr2")
-library(rr2)
 ```
 
 # Package structure
 
-This package has three main functions: `R2.resid()`, `R2.lik()`, and `R2.pred()`. You can use them individually in the form of, e.g., `R2.resid(mod, mod.r)` where `mod` is the full model and `mod.r` is the reduce model for partial R2s. If you do not include the reduced model `mod.r`, then the appropriate model with just the intercept is used to give the total R2. When using `R2.resid` and `R2.pred` with PGLS, you need to include the phylo object containing a phylogenetic tree, e.g., `R2.resid(mod, mod.r, phy = phy)`. 
+This package has three main functions: `R2.resid()`, `R2.lik()`, and `R2.pred()`. You can use them individually in the form of, e.g., `R2.resid(mod, mod.r)` where `mod` is the full model and `mod.r` is the reduce model for partial R2s. If you do not include the reduced model `mod.r`, then the appropriate model with just the intercept is used to give the total R^2^. When using `R2.resid` and `R2.pred` with PGLS, you need to include the phylo object containing a phylogenetic tree, e.g., `R2.resid(mod, mod.r, phy = phy)`. 
 
-You can calculate all three R2s at the same time with `R2(mod, mod.r)`. You can also specify which R2(s) to calculate within this function by turning off unwanted methods, e.g., `R2(mod, mod.r, resid = FALSE)` or `R2(mod, mod.r, resid = FALSE)`. 
+You can calculate all three R^2^s at the same time with `R2(mod, mod.r)`. You can also specify which R^2^(s) to calculate within this function by turning off unwanted methods, e.g., `R2(mod, mod.r, resid = FALSE)` or `R2(mod, mod.r, pred = FALSE)`. 
 
 This package also has some helper functions such as `inv.logit()`, `partialR2()`, and `partialR2adj()`.
 
@@ -45,9 +44,9 @@ This package also has some helper functions such as `inv.logit()`, `partialR2()`
 | PGLMM: communityPGLMM (gaussian) | R2.pred, --------, R2.lik  |
 | PGLMM: communityPGLMM (binomial) | R2.pred, --------, ------- |
 
-# Usage: calculating R2s for regression models
+# Usage: calculating R^2^s for regression models
 
-First, let's simulate data that will be used to fit various models
+First, let's simulate data that will be used to fit various models.
 
 ```{r data-sim}
 # data 
@@ -98,7 +97,7 @@ d$y_phy_binary <- rbinom(n = n, size = 1, prob = rr2::inv.logit(b1 * d$x1 + e))
 head(d)
 ```
 
-Then, let's fit some models and calculate their R2s.
+Then, let's fit some models and calculate their R^2^s.
 
 ## LMM
 
