JOSS paper online :tada: :tada: :tada:

--- a/README.Rmd
+++ b/README.Rmd
@@ -10,6 +10,8 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+[![DOI](http://joss.theoj.org/papers/10.21105/joss.01028/status.svg)](https://doi.org/10.21105/joss.01028)
+
 # Goal
 
 This package provides three R^2^s for statistical models with correlated errors including classes: 'lmerMod' (LMM), 'glmerMod' (GLMM), 'phylolm' (Phylogenetic GLS), and 'binaryPGLMM/phyloglm/communityPGLMM' (Phylogenetic Logistic Regression). Detailed technical descriptions can be found in [Ives 2018](https://doi.org/10.1093/sysbio/syy060).
@@ -207,7 +209,9 @@ R2(z.f, z.r3)
 
 Please cite the following paper if you find this package useful:
 
-> [Anthony Ives. 2018. R2s for Correlated Data: Phylogenetic Models, LMMs, and GLMMs. Systematic Biology. syy060](https://doi.org/10.1093/sysbio/syy060)
+> [Anthony Ives. 2018. R2s for Correlated Data: Phylogenetic Models, LMMs, and GLMMs. Systematic Biology, syy060.](https://doi.org/10.1093/sysbio/syy060)  
+> [Anthony R. Ives and Daijiang Li (2018). rr2: An R package to calculate R^2s for regression models. The
+  Journal of Open Source Software, 3(30), 1028.](https://doi.org/10.21105/joss.01028)
 
 # Contributing
 
