--- a/README.Rmd
+++ b/README.Rmd
@@ -10,8 +10,8 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-[![DOI](http://joss.theoj.org/papers/10.21105/joss.01028/status.svg)](https://doi.org/10.21105/joss.01028) [![CRAN status](https://www.r-pkg.org/badges/version/rr2)](https://cran.r-project.org/package=rr2) [![CRAN RStudio mirror downloads](http://cranlogs.r-pkg.org/badges/rr2)](http://www.r-pkg.org/pkg/rr2) [![CRAN RStudio mirror
-downloads](http://cranlogs.r-pkg.org/badges/grand-total/rr2?color=green)](http://www.r-pkg.org/pkg/rr2)
+[![DOI](https://joss.theoj.org/papers/10.21105/joss.01028/status.svg/)](https://doi.org/10.21105/joss.01028) [![CRAN status](https://www.r-pkg.org/badges/version/rr2)](https://cran.r-project.org/package=rr2/) [![CRAN RStudio mirror downloads](https://cranlogs.r-pkg.org/badges/rr2)](https://www.r-pkg.org/pkg/rr2) [![CRAN RStudio mirror
+downloads](https://cranlogs.r-pkg.org/badges/grand-total/rr2?color=green)](https://www.r-pkg.org/pkg/rr2)
 
 # Goal
 
